--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-	font-family: tahoma, Arial, sans-serif;
-	background-color:#000000;
+	font-family: Times New Roman;
+	background-image: url(http://silviahartmann.com/background-tile-art/images/gem-jewel-diamond/diamond-background-white1.jpg);
 	color:#c0c0c0;
 	}
 	
