--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: Times New Roman;
-	background-image: url(http://www.designsbyjuju.com/media/catalog/product/cache/1/image/1264x/9df78eab33525d08d6e5fb8d27136e95/f/l/fleur_de_lis_applique.jpg);
+	background-image: url(http://2.bp.blogspot.com/-6S74n7MKSEU/T5cITu_ujuI/AAAAAAAATmQ/xC9pSNi7kJM/s1600/colorful_twister-normal.jpg);
 	color:#c0c0c0;
 	}
 	
