--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
 	font-family: Times New Roman;
-	background-image: url(http://2.bp.blogspot.com/-6S74n7MKSEU/T5cITu_ujuI/AAAAAAAATmQ/xC9pSNi7kJM/s1600/colorful_twister-normal.jpg);
-	color:#c0c0c0;
+	background:#99003d;
 	}
 	
 h1 {
