--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 body {
 	font-family: Times New Roman;
-	background:#99003d;
+	background-color:#99003d;
 	}
 	
 h1 {
 	font-size:32px;
-	color:#006600;
-	background-color:#222222;
+	color:#000000;
 	}
 	
 h2 {
