--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -3,3 +3,6 @@ h1 {
 	font-size:20;
 	color:#000000;
 }
+body {
+	background:<img src="http://drabtofabdesign.com/wp-content/uploads/2012/06/Gray-Background-square-tile-e1339839859848.jpg">;
+}
