--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -4,5 +4,5 @@ h1 {
 	color:#000000;
 }
 body {
-	background:<img src="http://drabtofabdesign.com/wp-content/uploads/2012/06/Gray-Background-square-tile-e1339839859848.jpg">;
+	background-image:<img src="http://drabtofabdesign.com/wp-content/uploads/2012/06/Gray-Background-square-tile-e1339839859848.jpg">;
 }
