--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -4,5 +4,5 @@ h1 {
 	color:#000000;
 }
 body {
-	background-image: url("http://drabtofabdesign.com/wp-content/uploads/2012/06/Gray-Background-square-tile-e1339839859848.jpg");
+	background-image: url("http://www.starboutiqueltd.co.uk/wp-content/uploads/2011/04/ist2_7360872-elegant-abstract-wallpaper-pattern-background-tiles-seamlessly1.jpg");
 }
