--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -38,7 +38,7 @@ h1 {
 }
 
 .button {
-  	height: 20px;
+    height: 20px;
     width: 100px;
     background-color:#808080;
     border: 2px solid;
@@ -46,9 +46,12 @@ h1 {
     text-align:center;
     border-radius:20px;
     box-shadow: 0 4px 0 #000000;
-    margin:auto;
-}
+ }
 
 a.button:hover {
   	background:#ff0066;
+}
+
+.container {
+  	text-align:center;
 }
