--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -2,6 +2,7 @@ body {
 	background-image: url("http://drabtofabdesign.com/wp-content/uploads/2012/06/Gray-Background-square-tile-e1339839859848.jpg");
   font-family:Times New Roman;
   padding:10px;
+  text-align:center;
 }
 
 a {
