--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("http://drabtofabdesign.com/wp-content/uploads/2012/06/Gray-Background-square-tile-e1339839859848.jpg");
+	background-image: url("http://www.zingerbugimages.com/backgrounds/light_yellow_starburst_radiating_lines_background_1800x1600.jpg");
   font-family:Times New Roman;
   padding:10px;
   text-align:center;
