--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("http://www.zingerbugimages.com/backgrounds/light_yellow_starburst_radiating_lines_background_1800x1600.jpg");
+	background-image: url("http://www.markgimages.com/rue-blog-data/storage/asset/website-background-277a.jpg");
   font-family:Times New Roman;
   padding:10px;
   text-align:center;
