--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("http://www.markgimages.com/rue-blog-data/storage/asset/website-background-277a.jhttp://www.psdgraphics.com/file/yellow-lights-background.jpgpg");
+	background-image: url("http://native-webs.us/images/web-page-backgrounds-textures.jpg");
   font-family:Times New Roman;
   padding:10px;
   text-align:center;
