--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("http://native-webs.us/images/web-page-backgrounds-textures.jpg");
+	background-image: url("http://static.wallpedes.com/wallpaper/web/web-background-images-hd-wallpapers-res-wallpaper-web-page-background-design-blue-pattern-white-cute-hijau-images-hd-wallpapers.jpg");
   font-family:Times New Roman;
   padding:10px;
   text-align:center;
