--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,8 +1,9 @@
 body {
-	background-image: url("http://static.wallpedes.com/wallpaper/web/web-background-images-hd-wallpapers-res-wallpaper-web-page-background-design-blue-pattern-white-cute-hijau-images-hd-wallpapers.jpg");
+  background-image: url("http://xoo.me/template/10665/p16tbehd3v1kop1v5p1hta3426nj9-details.jpg");
   font-family:Times New Roman;
   padding:10px;
-  text-align:center;
+  text-align:center;#ffffff;
+  color:
 }
 
 a {
