--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,8 +1,8 @@
 body {
-  background-image: url("http://xoo.me/template/10665/p16tbehd3v1kop1v5p1hta3426nj9-details.jpg");
+  background-image: url("http://welshheritagedecor.co.uk/wp/wp-content/uploads/2012/03/Website-Background-Tile.png");
   font-family:Times New Roman;
   padding:10px;
-  text-align:center;#ffffff;
+  text-align:center;#000000;
   color:
 }
 
