--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: Times New Roman;
-	background-color:#99003d;
+	background-image: url("http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=10738860");
 	}
 	
 h1 {
