--- a/style.css
+++ b/style.css
@@ -5,22 +5,22 @@ body {
 	
 h1 {
 	font-size:32px;
-	color:#000000;
+	color:#ffffff;
 	}
 	
 h2 {
 	font-size:28px;
-	color:#336699;
+	color:#ffffff;
 	background-color:#222222;
 	}
 h3 {
 	font-size:24px;
-	color:#22ffff;
+	color:#ffffff;
 	background-color:#222222;
 	}
 h4, h5, h6 {
 	font-size:18px;
-	color:#ff88ff;
+	color:#ffffff;
 	background-color:#222222;
 	}
 
@@ -30,5 +30,5 @@ a {
 	}
 	
 a:hover {
-	color:#00ff00;
+	color:#ffffff;
 	}
