--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body {
 	font-family: Times New Roman;
 	background-image: url("http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=10738860");
 	}
-	
+footer {
+	text-align: center;
+	}
 h1 {
 	font-size:32px;
 	color:#000000;
