--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body {
-	font-family: Times New Roman;
+	font-family: 'Bad Script', cursive;
 	background-image: url("http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=10738860");
-	<link href='http://fonts.googleapis.com/css?family=Bad+Script' rel='stylesheet' type='text/css'>
-}
+	}
 footer {
 	text-align: center;
 	}
