--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-	font-family: 'Bad Script', cursive;
 	background-image: url("http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=10738860");
 	}
 footer {
@@ -8,6 +7,7 @@ footer {
 h1 {
 	color:#000000;
 	text-align: center;
+	<link href='http://fonts.googleapis.com/css?family=Bad+Script' rel='stylesheet' type='text/css'>;
 	}
 	
 h2 {
