--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 	background-image: url("http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=10738860");
 	}
 footer {
-	font-family: Avant Garde; Times New Roman;
+	font-family: Papyrus; Times New Roman;
 	text-align: center;
 	}
 h1 {
