this damn thing
>:(

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 	background-image: url("http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=10738860");
 	}
 footer {
-	font-family: Papyrus Full Stack; Times New Roman;
+	font-family: Papyrus, fantasy;
 	text-align: center;
 	}
 h1 {
