--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
 	background-image: url("http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=10738860");
-	}
+	font-family: Papyrus, fantasy;
+}
 footer {
 	font-family: Papyrus, fantasy;
 	text-align: center;
