--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 body {
 	background-image: url("http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=10738860");
-	font-family: Papyrus, fantasy;
+	font-family: 'Lobster', cursive;
 }
 footer {
-	font-family: Papyrus, fantasy;
 	text-align: center;
 	}
 h1 {
