--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	background-image: url("http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=10738860");
-	font-family: 'Lobster', cursive;
+	font-family: Papyrus, fantasy;
 }
 footer {
 	text-align: center;
